Generate profile automatically with release builds
Change-Id: I2fef03733b7ea277a7747f7f0c2d179a69ba2d79

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,7 +16,7 @@ androidxEspresso = "3.4.0"
 androidxHiltNavigationCompose = "1.0.0"
 # Skipping version 2.6.0-alpha02 due to https://issuetracker.google.com/249686765
 androidxLifecycle = "2.6.0-alpha01"
-androidxMacroBenchmark = "1.1.0"
+androidxMacroBenchmark = "1.2.0-alpha05"
 androidxNavigation = "2.5.2"
 androidxMetrics = "1.0.0-alpha03"
 androidxProfileinstaller = "1.2.0"
